Revise README for project overview and setup
Updated project overview, installation instructions, and troubleshooting section. Added details about the AI agent's capabilities and system requirements.